# scipy_test

./: README.md  pyproject.toml  test.ipynb
