[tool.poetry]
name = "scipy-test"
version = "0.1.0"
description = ""
authors = ["Fabi <your@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
scipy = "^1.14.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
